--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabuada</title>
+    <title>Tabuada JS</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/script.js" defer></script>
 </head>
 <body>
-    
+    <h2>Digite um número e confirme para gerar uma tabuada</h2>
+    <form id="multiplication-form">
+        <div class="form_control">
+            <label for="number">Tabuada do:</label>
+            <input type="number" id="number" name="number" placeholder="digite o numero">   
+        </div>
+        <div class="form_control">
+            <label for="multiplicator">Multiplicar até:</label>
+            <input type="number" id="multiplicator" name="multiplicator" value="10">
+        </div>
+        <input type="submit" value="Calcular">
+    </form>
+    <div id="multiplication-table">
+        <h2 id="multiplication-title">Tabuada do número: <span></span></h2>
+        <div id="multiplication-operations">
+            <p>Informe um número para calcular uma tabuada...</p>
+        </div>
+    </div>
 </body>
 </html>
